tests/files/flow_controller_tests/should_run/090.cmdr
x = 2.8;
print coth(x);