tests/files/flow_controller_tests/should_fail/094.cmdr
x = true;
print arccot(x);